# eth-communication

./: CMakeLists.txt  README.md  Socket.cpp  Socket.h  commConfig.h  commbst.cpp  commbst.h  commbst_eth.cpp  commbst_eth.h  example.cpp  main.cpp
libs/communication/: commbst.cpp  commbst.h
libs/communication/CommBst_Eth/: Socket.cpp  commbst_eth.cpp  commbst_eth.h
libs/communication/nRF24Communication/: commConfig.h  commTypes.h
